# MarketLibrary

./: .gitignore  Makefile  README.md  TwsSocketClient64.vcxproj  market-build.sh  source.7z
source/: CMakeLists.txt  Exports.h  Makefile  MarketLibrary.sln  MarketLibrary.vcxproj  MarketLibrary.vcxproj._user  MarketLibrary.vcxproj.filters  Markets.sln  Markets.vcxproj  Markets.vcxproj._user  OrderManager.cpp  OrderManager.h  TickManager.cpp  TickManager.h  TwsClient.cpp  TwsClient.h  TwsClientSync.cpp  TwsClientSync.h  TwsProcessor.cpp  TwsProcessor.h  TypeDefs.h  WrapperLog.cpp  WrapperLog.h  build.sh  dllmain.cpp  pc.h
source/client/: TwsClient.cpp  TwsClient.h  TwsClientCache.cpp  TwsClientCache.h  TwsClientCo.cpp  TwsClientCo.h  TwsClientSync.cpp  TwsClientSync.h
source/client/awaitables/: HistoricalDataAwaitable.cpp  HistoricalDataAwaitable.h  TwsAwaitable.cpp  TwsAwaitable.h
source/data/: Accounts.cpp  Accounts.h  BarData.cpp  BarData.h  HistoricalDataCache.cpp  HistoricalDataCache.h  OptionData.cpp  OptionData.h  StatAwait.cpp  StatAwait.h
source/types/: Bar.cpp  Bar.h  Contract.cpp  Contract.h  Currencies.cpp  Currencies.h  Exchanges.cpp  Exchanges.h  IBException.cpp  IBException.h  MyOrder.cpp  MyOrder.h  OrderEnums.h  Tick.cpp  Tick.h  TwsConnectionSettings.cpp  TwsConnectionSettings.h
source/types/proto/: OptionOI.proto  bar.proto  edgar.proto  ib.pb.cc  ib.pb.h  ib.proto  requests.pb.cc  requests.pb.h  requests.proto  results.pb.cc  results.pb.h  results.proto  watch.proto
source/wrapper/: WrapperCache.cpp  WrapperCache.h  WrapperCo.cpp  WrapperCo.h  WrapperLog.cpp  WrapperLog.h  WrapperPromise.h  WrapperSync.cpp  WrapperSync.h
tests/: CMakeLists.txt  HistoricalDataCacheTest.cpp  Markets.json  NewsTest.cpp  OrderManagerTests.cpp  Resource.rc  Tests.MarketLibrary.json  Tests.Markets.sln  Tests.Markets.vcxproj  Tests.Markets.vcxproj._user  TwsTests.cpp  XZTests.cpp  build.sh  main.cpp  pc.h
